--- a/_notes/Избранные заметки.md
+++ b/_notes/Избранные заметки.md
@@ -1,33 +1,7 @@
-## Избранные заметки
-
+---
+layout: page
+title: Избранные заметки
+tag: toc
 ---
 
 - [[Твой главный кредит]]
-  
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-___
-##### meta:
--   
-15.09.2022  
-
