--- a/_notes/Публичная работа.md
+++ b/_notes/Публичная работа.md
@@ -1,33 +1,7 @@
-## Публичная работа
-
+---
+layout: page
+title: Публичная работа
+tag: seed
 ---
 
 https://nesslabs.com/work-in-public
-  
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-___
-##### meta:
--   
-15.09.2022  
-
