--- a/_notes/Твой главный кредит.md
+++ b/_notes/Твой главный кредит.md
@@ -1,5 +1,7 @@
-### Твой главный кредит
-
+---
+layout: page
+title: Твой главный кредит
+tag: seed
 ---
 
 Время которое ты проживаешь сейчас дано было тебе в отсрочку когда-то ранее. Тогда, ранее, ты умер, но почему-то кто-то как-то дал еще немного времени в кредит
