--- a/_notes/Проактивность.md
+++ b/_notes/Проактивность.md
@@ -1,7 +1,10 @@
-§ Проактивность
+---
+layout: page
+title: Проактивность
+tag: moc
 ---
 
-Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни. 
+Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни.
 
 	Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность подчинить импульсивную реакцию своим ценностям составляет сущность проактивной личности
 
@@ -13,32 +16,10 @@
 4) в способности ставить значимые цели и стремиться к их достижению;
 5) в готовности активно воздействовать на условия среды в противоположность пассивному приспособлению
 
-  
+
 
 ---
 
 - [[Идея. Восприятие определяет поведение]]
 - [[Критика детерминизма]]
 - [[Философы о проактивности]]
-    
-	  
-
-
-
-
-
-___
-##### links:
-- 
-
-___
-##### tags: 
-
-
-
-
-
-
-
-16.06.2021
-
