--- a/_notes/Технологии изменений.md
+++ b/_notes/Технологии изменений.md
@@ -1,5 +1,7 @@
-## Технологии изменений
-
+---
+layout: page
+title: Технологии изменений
+tag: moc
 ---
 
 Какое значение имеют изменения в жизни человека? Основные направления культурной мысли социума сосредоточены на тезисе, что человек - существо стремящееся к счастью
@@ -9,31 +11,3 @@
 Ввиду удобства оперирования статичными категориями, ты обращаешь своё внимание на конечные точки процесса изменения, на состояния, начальное и конечное. Но сам процесс непосредственной смены этих состояний остаётся обделённым интересом. В этом и состоит трудность ясного понимания этого процесса - мы можем четко осознать и описать начальную позицию и более или менее успешно определить целевое состояние. Однако между этими двумя описаниями зачастую остаётся пропасть непознанного и неизвестного
 
 В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое технология и что такое изменения
-  
-
- 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-___
-##### meta:
--   
-15.09.2022  
-
