--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -1,8 +1,10 @@
-## Цифровой сад
-
+---
+layout: page
+title: Твой главный кредит
+tag: seed
 ---
 
-Обычно садом называют некоторую огороженную территорию, которой уделяется повышенное внимание и забота. Растут в саду чаще всего деревья, плодовые или декоративные растения. И что бы не выращивали в саду, ценность имеет не только результат, в виде цветов или плодов, но и сам процесс 
+Обычно садом называют некоторую огороженную территорию, которой уделяется повышенное внимание и забота. Растут в саду чаще всего деревья, плодовые или декоративные растения. И что бы не выращивали в саду, ценность имеет не только результат, в виде цветов или плодов, но и сам процесс
 
 Примерно такой же подход используется и в деле выращивания знаний. Идея, зарожденная зерном, при должной заботе может вырасти в устойчивую теорию, персональную или публичную. Но может и зачахнуть, если окажется неперспективной. Самое главное, что это происходит практически естественным путем
 
@@ -16,6 +18,3 @@
 - https://github.com/MaggieAppleton/digital-gardeners
 - https://nesslabs.com/digital-garden-set-up
 - https://joelhooks.com/digital-garden
-
-
-
