--- a/_notes/Проактивность.md
+++ b/_notes/Проактивность.md
@@ -3,6 +3,8 @@ layout: page
 title: Проактивность
 tag: moc
 ---
+### Проактивность
+
 
 Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни.
 
