--- a/_notes/Технологии изменений.md
+++ b/_notes/Технологии изменений.md
@@ -3,6 +3,7 @@ layout: page
 title: Технологии изменений
 tag: moc
 ---
+### Технология изменений
 
 Какое значение имеют изменения в жизни человека? Основные направления культурной мысли социума сосредоточены на тезисе, что человек - существо стремящееся к счастью
 
