--- a/_notes/Твой главный кредит.md
+++ b/_notes/Твой главный кредит.md
@@ -3,6 +3,7 @@ layout: page
 title: Твой главный кредит
 tag: seed
 ---
+### Твой главный кредит
 
 Время которое ты проживаешь сейчас дано было тебе в отсрочку когда-то ранее. Тогда, ранее, ты умер, но почему-то кто-то как-то дал еще немного времени в кредит
 
