--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -1,9 +1,10 @@
 ---
-layout: page
+layout: note
 title: Твой главный кредит
+id: Твой главный кредит
 tag: seed
 ---
-### Цифровой сада
+### Цифровой сад
 
 
 Обычно садом называют некоторую огороженную территорию, которой уделяется повышенное внимание и забота. Растут в саду чаще всего деревья, плодовые или декоративные растения. И что бы не выращивали в саду, ценность имеет не только результат, в виде цветов или плодов, но и сам процесс
@@ -16,7 +17,7 @@ tag: seed
 
 
 ###### Почитать еще про цифровые сады (Digital Garden):
-- https://zttl.space/t/czifrovye-sady-kak-unikalnoe-yavlenie-sovremennogo-virtualnogo-prostranstva/349/35
-- https://github.com/MaggieAppleton/digital-gardeners
-- https://nesslabs.com/digital-garden-set-up
-- https://joelhooks.com/digital-garden
+- [Цифровые сады как уникальное явление современного виртуального пространства](https://zttl.space/t/czifrovye-sady-kak-unikalnoe-yavlenie-sovremennogo-virtualnogo-prostranstva/349/35)
+- [Digital Gardening Tools and Resources](https://github.com/MaggieAppleton/digital-gardeners)
+- [How to set up your own digital garden](https://nesslabs.com/digital-garden-set-up)
+- [Your friend Joel's digital garden](https://joelhooks.com/digital-garden)
