--- a/_notes/Публичная работа.md
+++ b/_notes/Публичная работа.md
@@ -1,8 +1,9 @@
 ---
 layout: note
 title: Публичная работа
+id: Публичная работа
 tag: seed
 ---
-### Публичная работа
+
 
 https://nesslabs.com/work-in-public
