--- a/_notes/Публичная работа.md
+++ b/_notes/Публичная работа.md
@@ -4,6 +4,12 @@ title: Публичная работа
 id: Публичная работа
 tag: seed
 ---
+#seed
 
 
-https://nesslabs.com/work-in-public
+
+
+
+---
+Источник:
+- [The case for sharing your work in public](https://nesslabs.com/work-in-public)
