--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -4,7 +4,7 @@ title: Твой главный кредит
 id: Твой главный кредит
 tag: seed
 ---
-
+#seed
 
 
 Обычно садом называют некоторую огороженную территорию, которой уделяется повышенное внимание и забота. Растут в саду чаще всего деревья, плодовые или декоративные растения. И что бы не выращивали в саду, ценность имеет не только результат, в виде цветов или плодов, но и сам процесс
