--- a/_notes/Твой главный кредит.md
+++ b/_notes/Твой главный кредит.md
@@ -4,7 +4,7 @@ title: Твой главный кредит
 id: Твой главный кредит
 tag: seed
 ---
-
+#seed
 
 Время которое ты проживаешь сейчас дано было тебе в отсрочку когда-то ранее. Тогда, ранее, ты умер, но почему-то кто-то как-то дал еще немного времени в кредит
 
