--- a/_notes/Проактивность.md
+++ b/_notes/Проактивность.md
@@ -1,5 +1,13 @@
-Проактивность
 ---
+layout: note
+title: Публичная работа
+id: Публичная работа
+tag: seed
+---
+#moc 
+
+
+
 
 Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни. 
 
