--- a/_notes/Технологии изменений.md
+++ b/_notes/Технологии изменений.md
@@ -4,12 +4,13 @@ title: Технологии изменений
 id: Технологии изменений
 tag: moc
 ---
+#moc 
 
 
-Какое значение имеют изменения в жизни человека? Основные направления культурной мысли социума сосредоточены на тезисе, что человек - существо стремящееся к счастью
 
-[[взгляд на счастье и смысл жизни в философии, биологии, литературе]]
 
-Ввиду удобства оперирования статичными категориями, ты обращаешь своё внимание на конечные точки процесса изменения, на состояния, начальное и конечное. Но сам процесс непосредственной смены этих состояний остаётся обделённым интересом. В этом и состоит трудность ясного понимания этого процесса - мы можем четко осознать и описать начальную позицию и более или менее успешно определить целевое состояние. Однако между этими двумя описаниями зачастую остаётся пропасть непознанного и неизвестного
+Какое значение имеют изменения в жизни человека? Основные направления культурной мысли социума сосредоточены на тезисе, что человек - существо стремящееся к [[Концепция счастья в философии, культуре, религии|счастью]]
 
-В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое технология и что такое изменения
+Ввиду удобства оперирования [[Иллюзия статичности мира|статичными категориями]], ты обращаешь своё внимание на конечные точки процесса изменения, на состояния, начальное и конечное. Но сам процесс непосредственной смены этих состояний остаётся обделённым интересом. В этом и состоит трудность [[ясного понимания]] этого процесса - мы можем четко осознать и описать начальную позицию и более или менее [[Обратное планирование|успешно определить целевое состояние]]. Однако между этими двумя описаниями зачастую остаётся пропасть [[непознанного и неизвестного]]
+
+В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое [[Технология]] и что такое [[Изменения]]
