--- a/_notes/Технологии изменений.md
+++ b/_notes/Технологии изменений.md
@@ -14,3 +14,8 @@ tag: moc
 Ввиду удобства оперирования [[Иллюзия статичности мира|статичными категориями]], ты обращаешь своё внимание на конечные точки процесса изменения, на состояния, начальное и конечное. Но сам процесс непосредственной смены этих состояний остаётся обделённым интересом. В этом и состоит трудность [[ясного понимания]] этого процесса - мы можем четко осознать и описать начальную позицию и более или менее [[Обратное планирование|успешно определить целевое состояние]]. Однако между этими двумя описаниями зачастую остаётся пропасть [[непознанного и неизвестного]]
 
 В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое [[Технология]] и что такое [[Изменения]]
+
+
+
+---
+[[Vademecum/index|Вернуться в начало вселенной]]
