--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -1,7 +1,7 @@
 ---
 layout: note
-title: Твой главный кредит
-id: Твой главный кредит
+title: Цифровой сад
+id: Цифровой сад
 tag: seed
 ---
 #seed
