--- a/_notes/Проактивность.md
+++ b/_notes/Проактивность.md
@@ -1,7 +1,7 @@
 ---
 layout: note
-title: Публичная работа
-id: Публичная работа
+title: Проактивность 
+id: Проактивность
 tag: seed
 ---
 #moc 
@@ -11,7 +11,7 @@ tag: seed
 
 Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни. 
 
-	Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность подчинить импульсивную реакцию своим ценностям составляет сущность проактивной личности
+Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность подчинить импульсивную реакцию своим ценностям составляет сущность проактивной личности
 
 Проактивность представляет собой устойчивую характеристику зрелой личности, выражающуюся как минимум в пяти аспектах:
 
@@ -28,25 +28,4 @@ tag: seed
 - [[Идея. Восприятие определяет поведение]]
 - [[Критика детерминизма]]
 - [[Философы о проактивности]]
-    
-	  
-
-
-
-
-
-___
-##### links:
-- 
-
-___
-##### tags: 
-
-
-
-
-
-
-
-16.06.2021
 
