--- a/_notes/Развитие по экспоненте против линейного развития.md
+++ b/_notes/Развитие по экспоненте против линейного развития.md
@@ -1,7 +1,7 @@
 ---
 layout: note
-title: Иллюзия статичности мира
-id: Иллюзия статичности мира
+title: Развитие по экспоненте
+id: Развитие по экспоненте
 tag: seed
 ---
 #seed 
