--- a/_notes/Развитие по экспоненте против линейного развития.md
+++ b/_notes/Развитие по экспоненте против линейного развития.md
@@ -22,22 +22,10 @@ tag: seed
 
 >Доверяйте экспонентам, будьте терпеливы, и вы будете приятно удивлены.
   
-    
-	  
 
 
 
-
-
-
-
-
-
-
-
-
-___
-Источник:
+###### Источник:
 -  [Как быть успешным by Сэм Альтман](https://zamesin.me/ru-how-to-be-succesful-by-sam-altman)  
 
 
