--- a/_notes/Технологии изменений.md
+++ b/_notes/Технологии изменений.md
@@ -13,9 +13,10 @@ tag: moc
 
 Ввиду удобства оперирования [[Иллюзия статичности мира|статичными категориями]], ты обращаешь своё внимание на конечные точки процесса изменения, на состояния, начальное и конечное. Но сам процесс непосредственной смены этих состояний остаётся обделённым интересом. В этом и состоит трудность [[ясного понимания]] этого процесса - мы можем четко осознать и описать начальную позицию и более или менее [[Обратное планирование|успешно определить целевое состояние]]. Однако между этими двумя описаниями зачастую остаётся пропасть [[непознанного и неизвестного]]
 
-В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое [[Технология]] и что такое [[Изменения]]
+Еще одна трудность в четком осознании процессов изменений состоит в излишнем внимании частным и специфичным случаям  и игнорирования [[Системный подход|системности всяких изменений]] Если ставят задачей что-либо изменить, то сразу определяют некие рамки: изменить свою продуктивность, привычки и навыки, личные отношения, карьеру, организацию, страну
+
+В качестве вводного этапа погружения в тему технологий изменений логичным будет определить что такое [[Технология]] и что такое [[Изменения]], а затем переходить к [[Дорожная карта исследований технологий изменений|дорожной карте]] исследования технологий изменений
 
 
 
 ---
-[[Vademecum/index|Вернуться в начало вселенной]]
