--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -4,7 +4,7 @@ title: Цифровой сад
 id: Цифровой сад
 tag: seed
 ---
-#seed
+#tree
 
 
 
@@ -16,6 +16,16 @@ tag: seed
 В подходе Digital Garden вообще много органического и естественного. В противовес традиционным формам организации информации в виде списков, категорий и иерархий мы мыслим совершенно по другому. Путь нашей мысли движется по ассоциативным путям, без всякой строгой структуры и предопределенности
 
 Цифровой сад это один из примеров подхода [[Публичная работа|публичного обучения]]
+
+> [!INFO] В соответствии с путем развития знаний в "цифровом садоводстве" принято разделять заметки на семена (seed), деревья (tree), и плоды (fruit)
+
+- Seed - это начальная стадия эволюции заметки. Это короткая идея, чаще всего атомарная, но потенциально интересная в рамках тематики сада
+- Tree - когда заметка обрастает дополнениями и перекрестными связями с другими заметками она становится деревом
+- Fruit - конечный продукт развития идеи из семени - некий ощутимый артефакт, статья, реферат, глава книги или пост в блоге
+
+В саду Vademecum кроме этих трех типов автор использует еще два: MOC (Map of Content) и TOC (Table of Content)
+- MOC - заметка на определенную тему объединяющая в себе связи на несколько других заметок. Этакая точка входа в тему или концепцию
+- TOC - содержание, таблица с перечислением заметок, без описания связей и вводной информации по заметкам в ней содержащимся
 
 
 ###### Почитать еще про цифровые сады (Digital Garden):
