--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -17,8 +17,7 @@ tag: seed
 
 Цифровой сад это один из примеров подхода [[Публичная работа|публичного обучения]]
 
-> [!INFO] В соответствии с путем развития знаний в "цифровом садоводстве" принято разделять заметки на семена (seed), деревья (tree), и плоды (fruit)
-
+> В соответствии с путем развития знаний в "цифровом садоводстве" принято разделять заметки на семена (seed), деревья (tree), и плоды (fruit)
 - Seed - это начальная стадия эволюции заметки. Это короткая идея, чаще всего атомарная, но потенциально интересная в рамках тематики сада
 - Tree - когда заметка обрастает дополнениями и перекрестными связями с другими заметками она становится деревом
 - Fruit - конечный продукт развития идеи из семени - некий ощутимый артефакт, статья, реферат, глава книги или пост в блоге
