--- a/_notes/Цифровой сад.md
+++ b/_notes/Цифровой сад.md
@@ -22,7 +22,9 @@ tag: seed
 - Tree - когда заметка обрастает дополнениями и перекрестными связями с другими заметками она становится деревом
 - Fruit - конечный продукт развития идеи из семени - некий ощутимый артефакт, статья, реферат, глава книги или пост в блоге
 
-В саду Vademecum кроме этих трех типов автор использует еще два: MOC (Map of Content) и TOC (Table of Content)
+В саду Vademecum кроме этих трех типов автор использует еще два: 
+
+>MOC (Map of Content) и TOC (Table of Content)
 - MOC - заметка на определенную тему объединяющая в себе связи на несколько других заметок. Этакая точка входа в тему или концепцию
 - TOC - содержание, таблица с перечислением заметок, без описания связей и вводной информации по заметкам в ней содержащимся
 
