--- a/_notes/Дорожная карта исследований технологий изменений.md
+++ b/_notes/Дорожная карта исследований технологий изменений.md
@@ -9,7 +9,7 @@ tag: seed
 
 
 
-##### Дорожная карта исследований технологий изменений
+#### Дорожная карта исследований технологий изменений
 
 Начало любых изменений: Управление энергией
 
