--- a/_notes/Технология.md
+++ b/_notes/Технология.md
@@ -9,7 +9,7 @@ tag: moc
 
 
 
-##### Определение технологии
+#### Определение технологии
 Технология - это совокупность методов и инструментов направленных на достижение определенного результата
 
 Управление изменениями - метанавык. Если обладать этим навыком, не имеет значения, что менять, и в какой области
