--- a/_notes/Технология.md
+++ b/_notes/Технология.md
@@ -16,3 +16,9 @@ tag: moc
 
 В качестве основного подхода в этом исследовании устанавливается [[Системный подход]]
 
+#### Три вопроса технологии изменений
+- Что менять?
+- На что менять?
+- Как менять?
+
+Вопросы взяты из Теории ограничений систем
