--- a/_notes/Дорожная карта исследований технологий изменений.md
+++ b/_notes/Дорожная карта исследований технологий изменений.md
@@ -2,7 +2,7 @@
 layout: note
 title: Дорожная карта исследований технологий изменений
 id: Дорожная карта исследований технологий изменений
-tag: #seed
+tag: seed
 ---
 
 
