--- a/_notes/Культура планирования в управлении бизнесом.md
+++ b/_notes/Культура планирования в управлении бизнесом.md
@@ -2,7 +2,7 @@
 layout: note
 title: Культура планирования в управлении бизнесом
 id: Культура планирования в управлении бизнесом
-tag: #seed
+tag: seed
 ---
 
 
