--- a/_notes/Избранные заметки.md
+++ b/_notes/Избранные заметки.md
@@ -9,5 +9,17 @@ tag: toc
 
 
 
+#### Избранные заметки
 - [[Твой главный кредит]]
 - [[Хансей - практика самоанализа ради улучшения]]
+
+
+#### Основные темы сада
+- [[§ Технологии изменений]]
+- [[§ Системный подход]]
+- [[§ Продуктивность]]
+- [[§ Терапия]]
+
+#### Конспекты
+- [[Укрощение амигдалы. Джон Арден]]
+- 
