--- a/_notes/Культура планирования в управлении бизнесом.md
+++ b/_notes/Культура планирования в управлении бизнесом.md
@@ -6,13 +6,13 @@ tag: seed
 ---
 
 
-Планирование в бизнесе может быть эффективным и системным только если оно входит в число бизнес-ценностей
+Планирование в бизнесе может быть эффективным и [[§ Системный подход|системным]] только если оно входит в число бизнес-ценностей
 
 **Для этого нужно:**
 - Пересмотреть взгляд на планирование, как практику и обязанность менеджера. Принять внутренне обязательства планирования
 - Сделать процесс планирования легким, комфортным и интересным
 - Разработать удобные инструменты и методы
-- Нарастить привычки связанные с планированием в бизнесе
+- Нарастить [[Изменение привычек|привычки]] связанные с планированием в бизнесе
    
 
 
