--- a/_notes/Проактивность.md
+++ b/_notes/Проактивность.md
@@ -9,9 +9,9 @@ tag: seed
 
 
 
-Проактивность - парадигма в основе которой лежит представление человека, как субьекта всякого действия в его жизни. 
+Проактивность - парадигма в основе которой лежит представление человека, как субъекта всякого действия в его жизни. 
 
-Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность подчинить импульсивную реакцию своим ценностям составляет сущность проактивной личности
+Быть проактивным означает осознать свои глубинные ценности и цели, действовать в соответствии со своими жизненными принципами, независимо от условий и обстоятельств. Способность [[К черту мотивацию, вам нужна дисциплина|подчинить импульсивную реакцию]] своим ценностям составляет сущность проактивной личности
 
 Проактивность представляет собой устойчивую характеристику зрелой личности, выражающуюся как минимум в пяти аспектах:
 
