--- a/_notes/Дорожная карта исследований технологий изменений.md
+++ b/_notes/Дорожная карта исследований технологий изменений.md
@@ -9,24 +9,36 @@ tag: seed
 
 
 
-#### Дорожная карта исследований технологий изменений
+### Дорожная карта исследований системных технологий изменений
 
-Начало любых изменений: Управление энергией
+#### Теория 
+##### Основа любых изменений: 
+	- Управление энергией
+	- Планирование изменений
 
-Модель изменений
-	1. Модель персональных изменений
-	2. Человек - автор своих изменений
-	3. Метод микрошагов
-	4. Конечные артефакты изменений
+#####  Модель изменений
+	- Модель персональных изменений
+	- Человек - автор своих изменений
+	- Метод микрошагов и эффект накопления
+	- Конечные артефакты изменений
+	- Системный подход к изменениям
 
-Изменение уровня физической энергии
-	1. Отдых и восстановление
-	2. Физическая активность
-	3. Питание
+#### Практика
+#####  Изменение уровня физической энергии
+	- Отдых и восстановление
+	- Физическая активность
+	- Питание
 
-Изменение уровня психической энергии
-	1. Снижение базовой тревожности
-	2. Настройка дофаминового протокола
+#####  Изменение уровня психической энергии
+	- Снижение базовой тревожности
+	- Настройка дофаминового протокола
 	
-Практика технологий изменений
-	1. Изменения - это навык. И конечная задача ТИ - выработка этого навыка. 
+#####  Практика технологий изменений
+	- Изменения - это навык
+	- Алгоритм начальной гипотезы
+	- Спираль изменений
+	- Методы
+
+#####  Работа с сопротивлениями
+	- Самосаботаж и сопротивление
+	- Когнитивные искажения и ловушки
