--- a/_notes/Изменения.md
+++ b/_notes/Изменения.md
@@ -33,3 +33,10 @@ tag: seed
 
 #### Важность описаний процессов изменений
 В процессе изменений не называть слов "избавиться", "бросить", "прекратить" Так как личность это система, то в системе нельзя просто взять и удалить какой-либо элемент, тем более что система будет сопротивляться. В системе можно только изменять элементы (для этого четко разделяя форму и суть) и изменять связи между элементами
+
+#### Модель персональных системных изменений
+ - Идентичность
+ - Мотивы
+ - Привычки
+ - Действия
+ - Контекст
