--- a/_notes/Технология.md
+++ b/_notes/Технология.md
@@ -14,7 +14,7 @@ tag: moc
 
 Управление изменениями - метанавык. Если обладать этим навыком, не имеет значения, что менять, и в какой области
 
-В качестве основного подхода в этом исследовании устанавливается [[Системный подход]]
+В качестве основного подхода в этом исследовании устанавливается [[§ Системный подход]]
 
 #### Три вопроса технологии изменений
 - Что менять?
