--- a/_notes/Важно не что делать, важно как.md
+++ b/_notes/Важно не что делать, важно как.md
@@ -8,7 +8,7 @@ tag: seed
 
 
 
-Не имеет значения, что именно ты делаешь, если ты делаешь это безупречно: быстро, аккуратно, [[Проактивность|проактивно]]
+Не имеет значения, что именно ты делаешь, если ты делаешь это безупречно: быстро, аккуратно, [[§ Проактивность|проактивно]]
 
 [[Починка дофаминового протокола|Дофамин]] будет вырабатываться уже от наличия этих условий твоего действия, так как для мозга быстрое и тщательное действие сигнализирует о полезном действии, которое нужно будет закрепить
 
