--- a/_notes/Темы, мотивы и смыслы этого сада.md
+++ b/_notes/Темы, мотивы и смыслы этого сада.md
@@ -10,27 +10,25 @@ tag: moc
 
 
 
-Название этой заметки намекает на начальный этап любого исследования - определение смыслов и мотивов самого исследования
+Название этой заметки намекает на начальный этап любого исследования или путешествия - определение смыслов и мотивов самого исследования
 
-Как сказано на [[Vademecum/index|главной странице]], наполнение цифрового сада несет отпечаток круга интересов, а в особенности прикладных задач автора
+Как сказано на главной странице, наполнение цифрового сада несет отпечаток круга интересов, а в особенности прикладных задач автора
 
-А всегда актуальной задачей является достижение более комфортных условий, чем есть сейчас в специфичной сфере жизни или в целом. Иначе, говоря, стремление к счастью, заложенное в биологические механизмы человеческого существа
+Но обобщающей актуальной задачей является достижение более комфортных условий, чем есть сейчас в специфичной сфере жизни или в целом. Иначе, говоря, стремление к счастью, заложенное в биологические механизмы человеческого существа
 
-Но если эта базовая потребность более менее понятна и, в определенной степени, универсальна, то пути ее достижения разнообразны и специфичны для каждого индивида. Однако, несмотря на такое разнообразие, есть у всяких подобных стремлений два общих свойства
-1) Любое стремление удовлетворить потребности есть [[Изменения|стремление к изменениям]]
-2) Всякое стремление к изменениям сталкивается с необходимостью работы с системами, вызывая нужду в [[§ Системный подход|системном подходе]]
+Но если эта базовая потребность более менее понятна и, в определенной степени, универсальна, то пути ее достижения разнообразны и специфичны для каждого индивида. Однако, несмотря на такое разнообразие, есть у всяких подобных стремлений два общих свойства  
+1) Любое стремление удовлетворить потребности есть [[Изменения|стремление к изменениям]], суть которых есть [[Изменения - это обучение|обучение]]
+2) Всякое стремление к изменениям сталкивается с необходимостью работы с окружающей средой, а ввиду ее сложности и многообразия - с системами, вызывая нужду в [[§ Системный подход|системном подходе]]  
 
-Сочетание этих двух свойств и есть основной предмет исследования посредством заметок этого цифрового сада
+Сочетание этих двух свойств и есть сквозной мета-предмет исследования посредством заметок этого цифрового сада.
+А вот как этот мета-мотив реализуется посредством написания заметок цифрового сада можно будет наблюдать каждому желающему
 
-
-{актуальность технологий изменений в бизнесе}
-
-{смежные темы: поведенческая экономика, обучение, управление знаниями}
+Калитка цифрового сада открывается
 
 
 
-- [[Проактивность]]
-- [[Дисциплина]]
+- [[§ Проактивность]]
+- [[§ Дисциплина]]
 - Управление знаниями и эффективное обучение
 - Траблшуттинг
  
