--- a/_notes/Избранные заметки.md
+++ b/_notes/Избранные заметки.md
@@ -15,7 +15,11 @@ tag: toc
 
 
 #### Основные темы сада
+- [[§ Дисциплина]]
 - [[§ Технологии изменений]]
 - [[§ Системный подход]]
 - [[§ Продуктивность]]
+- [[§ Философия]]
 
+
+#### Фрукты. Посты в канал "Саморазвитие в картинках"
