--- a/_notes/Изменения.md
+++ b/_notes/Изменения.md
@@ -2,12 +2,12 @@
 layout: note
 title: Изменения
 id: Изменения
-tag: seed
+tag: moc
 ---
 
 
 
-
+{внести структурности в заметку}
 
 #### Типология изменений
 В рамках исследований технологий изменений, для начала можно выделить два крупных множества: 
@@ -28,11 +28,28 @@ tag: seed
 
 #### Терапия как методология персональных изменений 
 Личностные изменения на физиологическом уровне как вещественный артефакт состоят в перестройке нейронных связей. 
-Субъективный артефакт - ощещение комфорта и удовлетворенности от текущей ситуации.
+Субъективный артефакт - ощущение комфорта и удовлетворенности от текущей ситуации.
 
 
 #### Важность описаний процессов изменений
 В процессе изменений не называть слов "избавиться", "бросить", "прекратить" Так как личность это система, то в системе нельзя просто взять и удалить какой-либо элемент, тем более что система будет сопротивляться. В системе можно только изменять элементы (для этого четко разделяя форму и суть) и изменять связи между элементами
+
+---
+
+#### Философия изменений
+Отдельная заметка-исследование: [[Философия изменений]]
+
+Изменения есть суть окружающей нас динамичной и хаотичной вселенной
+
+Есть внутренний интерес познать непознаваемое, упорядочить в сознании хаос бытия, с его непредсказуемостью, быстротечностью, изменчивостью
+
+https://plato.stanford.edu/entries/change/
+https://insertphilosophyhere.com/aristotles-theory-of-change/
+
+
+
+---
+{практический смысл модели?}
 
 #### Модель персональных системных изменений
  - Идентичность
@@ -40,3 +57,7 @@ tag: seed
  - Привычки
  - Действия
  - Контекст
+
+---
+- [[Жить другой жизнью]]
+- [[Изменения - это обучение]]
