--- a/_notes/Метод перенастройки мозга.md
+++ b/_notes/Метод перенастройки мозга.md
@@ -9,7 +9,7 @@ tag: seed
 
 
 
-Метод перенастройки мозга из книги Джона Ардена [[Укрощение амигдалы. Джон Арден|"Укрощение амигдалы"]] 
+Метод перенастройки мозга из книги Джона Ардена "Укрощение амигдалы" 
 Такая задача может стоять в рамках целей [[§ Терапия|терапии]]
 
 • концентрация;
