--- a/_notes/Твой главный кредит.md
+++ b/_notes/Твой главный кредит.md
@@ -2,14 +2,50 @@
 layout: note
 title: Твой главный кредит
 id: Твой главный кредит
-tag: seed
+tag: tree
 ---
 
 
 
 
-Время которое ты проживаешь сейчас дано было тебе в отсрочку когда-то ранее. Тогда, ранее, ты умер, но почему-то кто-то как-то дал еще немного времени в кредит
+Время которое ты проживаешь сейчас дано было тебе в отсрочку когда-то ранее. Тогда, ранее, ты умер, но почему-то кто-то и как-то дал еще немного времени в кредит
 
 Ты не знаешь сколько  точно, но знаешь что мало. И ты постоянно помнишь об этом. Это придает небывалую силу самой субстанции времени. Это дает силу отсечь все лишнее в жизни и прикоснуться к чему-то важному и настоящему
 
+Концепция времени часто лишь отговорка при отсутствии решительности. Потому что когда есть решительность - находится время, создаётся контекст, рождаются возможности
+
+Ни наличие времени, ни наличие сил или навыков, ни какие иные условия не определяют будет сделано дело или нет. Только решительность имеет значение
+
+Решительность в свою очередь производная от решения. [[Дисциплина это не про усилие или силу воли. Это про осознание, выбор и решение|Решение это выбор]]. Выбор между альтернативами которые кажутся привлекательными для разных частей сознания, или, на физиологическом уровне, для разных нейронных сетей. Нейроны в лобных долях спорят с нейронами в гипоталамусе или амигдале. Спорят о том, что делать или не делать прямо сейчас. И это не баг. Личность должна выжить, а для этого выбирать оптимальный для себя вариант действия. Выбор есть благо и проклятье личности.
+
+>Но само наличие выбора и акта его свершения чаще не осознается. Все происходит на автоматическом уровне
+
 ---
+
+Стоик Сенека в первом же письме к Луцилию призывает изменить свое отношение к своему времени, утверждая, что "у нас его воруют, отбирают, но, что страшнее всего, мы сами его тратим впустую"
+> Но позорнее всего потеря по нашей собственной небрежности
+
+В том то и беда наша, пишет Сенека, что смерть мы видим впереди, когда на самом деле, она позади назад, так как прошлое уже мертво, т.е. принадлежит смерти
+
+> Удержишь в руках сегодняшний день - меньше будешь зависеть от завтрашнего
+
+Отсюда ты должен не просто осозновать свои траты, но и строго следить за их направлением. Исходя из Разума ты устанавливаешь себе правило:
+
+**Только на благие цели ты можешь тратить свое драгоценное время**
+
+*Прочитав и осмыслив первое письмо примись за действия немедля:*
+- *начни считать каждую минуту своего дня. Пусть будет не сразу получаться учитывать все, но помня об этом, будь настойчив*
+- *удали решительно все утечки времени, все ловушки и силки внимания, энергии и твоего времени. **Помни о природе их и не позволяй им снова овладеть твоим желанием***
+- *помни и часто размышляй о семи благородных делах, о действиях угодных плану стоика и об избегании неугодных. *
+- *каждый вечер давай отчет прожитому дню, куда ушло время, во благо ли или на удовлетворение страстей и пороков*
+- *будь решителен, терпелив и настойчив. Не сразу, но все получится.*
+---
+
+>Человек всегда относился ко Времени враждебно. Пространство, материю — этих удавалось как–то приручить. Время оставалось тем же дико-первобытным. С тех пор как человек заглянул в дали Вселенной, услышал тиканье мировых часов, отсчитывающих миллиарды лет, увидел, как рушатся галактики, — Время, пожалуй, стало еще страшней.
+>*Гранин Даниил Александрович*
+
+---
+- [Сенека. Нравственные письма к Луцилию](http://ancientrome.ru/antlitr/t.htm?a=1346570000)
+- [[Следствие из дихотомии контроля - нет смысла оценивать безразличное]]
+- [[§ Философия]]
+
