--- a/_notes/Темы, мотивы и смыслы этого сада.md
+++ b/_notes/Темы, мотивы и смыслы этого сада.md
@@ -5,53 +5,25 @@ id: Темы
 tag: moc
 ---
 
-
-
-
-
-
 Название этой заметки намекает на начальный этап любого исследования или путешествия - определение смыслов и мотивов самого исследования
 
-Как сказано на главной странице, наполнение цифрового сада несет отпечаток круга интересов, а в особенности прикладных задач автора
-
-Но обобщающей актуальной задачей является достижение более комфортных условий, чем есть сейчас в специфичной сфере жизни или в целом. Иначе, говоря, стремление к счастью, заложенное в биологические механизмы человеческого существа
+Хотя наполнение цифрового сада и несет отпечаток круга интересов, а в особенности прикладных задач автора, обобщающей и довольно универсальной актуальной задачей большинства изысканий в области развития является достижение более комфортных условий, чем есть сейчас в специфичной сфере или в жизни в целом. Иначе, говоря, стремление к счастью, заложенное в биологические механизмы человеческого существа
 
 Но если эта базовая потребность более менее понятна и, в определенной степени, универсальна, то пути ее достижения разнообразны и специфичны для каждого индивида. Однако, несмотря на такое разнообразие, есть у всяких подобных стремлений два общих свойства  
 1) Любое стремление удовлетворить потребности есть [[Изменения|стремление к изменениям]], суть которых есть [[Изменения - это обучение|обучение]]
 2) Всякое стремление к изменениям сталкивается с необходимостью работы с окружающей средой, а ввиду ее сложности и многообразия - с системами, вызывая нужду в [[§ Системный подход|системном подходе]]  
 
 Сочетание этих двух свойств и есть сквозной мета-предмет исследования посредством заметок этого цифрового сада.
-А вот как этот мета-мотив реализуется посредством написания заметок цифрового сада можно будет наблюдать каждому желающему
+А вот как этот мета-мотив реализуется посредством написания заметок [[Цифровой сад|цифрового сада]] можно будет наблюдать каждому желающему, просто пройдя по его тропинкам
 
-Калитка цифрового сада открывается
-
-
-
-- [[§ Проактивность]]
-- [[§ Дисциплина]]
-- Управление знаниями и эффективное обучение
-- Траблшуттинг
- 
+### Итак, калитка цифрового сада открывается.
+И первая тропинка ведет к важнейшему смыслу всякой деятельности человека -  [[Твой главный кредит|осознанию важности и конечности отведенного нам времени]]
+Но можно выйти сразу и на широкую и интересную аллею [[Эффективные коммуникации в бизнес-среде]], либо уединиться в [[§ Философия|философской]] беседке
+Ну или направиться к самым популярным темам психологии и саморазвития: [[§ Проактивность]] и [[§ Дисциплина]]
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-___
- 
 
