--- a/_notes/Визуальное мышление.md
+++ b/_notes/Визуальное мышление.md
@@ -1,14 +1,26 @@
 ---
 layout: note
 title: Визуальное мышление
-id: Продуктивность
+id: Визуальное мышление
 tag: seed
 ---
 
-Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации
+Визуальное мышление - оперирование в своем сознании визуальными образами для анализа и синтеза новой информации, а также усвоении, хранении и передачи готовой информации, следуя определенным [[Принципы визуального восприятия|принципам визуального восприятия]] и паттернам
 
 Такое оперирование образами является основой большинства современных методик запоминания - [[Мнемотехника|мнемотехники]]
 
 Применительно к бизнесу, визуальное мышление - один из основных каналов взаимодействия бизнеса с целевой аудиторией, посредством визуальной рекламы, визуального контента
 
 Оперирование текстом, также можно отнести к процессам визуального мышления, так как в данном случае, оперируем образами символов и блоков символов. Особенно когда, перед текстом стоят прагматичные задачи в [[Три функции эффективного коммерческого сообщения|убеждении, научении или обьяснении]]
+
+Прикладным направлением визуального мышления является [[Визуальные заметки. Visual Note-taking]], методики сильно упрощающие работу с информацией: конспектирование, структурирование, запоминание.
+
+[[Как работают прикладные методы визуального мышления]] - визуальные коспекты, интеллект карты, концепт-карты и иные мотодологии графического представления мыслительных образоц и процессов
+
+
+
+[[Модель вероятности осознанной обработки информации (ELM)]] описывает два пути обработки сообщений
+
+---
+[Когнитивная психология: теория дуального процесса мышления](https://lpgenerator.ru/blog/2015/08/07/kognitivnaya-psihologiya-teoriya-dualnogo-processa-myshleniya/)
+
