--- a/_notes/Три функции эффективного коммерческого сообщения.md
+++ b/_notes/Три функции эффективного коммерческого сообщения.md
@@ -11,5 +11,13 @@ tag: seed
 
 [[Эффективные коммуникации в бизнес-среде|Коммерческим сообщением]], здесь и далее, называется сообщение как единица коммуникаций применительно к бизнес среде, в рекламе и маркетинге, бизнес-планировании, обучении и работе с персоналом (HR)
 
+Как и всякое сообщение оно достигает получателя двумя путями, согласно [[Модель вероятности осознанной обработки информации (ELM)]], центральным, основным и периферийным
 
-1. Первая задача эффективного коммерческого сообщения
+
+### 1. Убедить
+Первая задача эффективного коммерческого сообщения - убедить получателя и побудить его совершить целевое действие
+### 2. Научить
+Вторая задача - научить
+[[Четыре мотивационные стратегии в модели ARCS Джона Келлера]]
+
+### 3. Объяснить и рассказать
