--- a/_notes/Эффективные коммуникации в бизнес-среде.md
+++ b/_notes/Эффективные коммуникации в бизнес-среде.md
@@ -15,6 +15,8 @@ tag: moc
 
 Наиболее эффективные средства передачи информации в целом, и в бизнес-среде, в частности, опираются на [[Визуальное мышление|визуальное мышление]]. Артефакты визуальных бизнес-коммуникаций это: презентация, инфографика, инструкция, регламент, маркетинговое сообщение, реже, короткий коммерческий текст
 
+С научными подходами эффективные коммуникации изучаются в различных [[Список коммуникационных теорий|коммуникационных теориях]]
+
 {текст перегружен. Порезать по Ильяхову}
 
 ---
